2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif using autoconf-2.67,
	automake-1.11.1 and libtool-2.2.8).
	* configure: Ditto.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/arm.h: Replace C++ style comment
	with ANSI C one.

2010-05-30  Ivan Maidanski <ivmai@mail.ru> (really Bradley Smith)

	* src/atomic_ops/sysdeps/gcc/avr32.h (AO_test_and_set): Use
	"register long" (instead of "int") for "ret" variable.
	* src/atomic_ops/sysdeps/gcc/avr32.h (AO_test_and_set): Replace
	with AO_test_and_set_full (same for AO_HAVE_test_and_set).
	* src/atomic_ops/sysdeps/gcc/avr32.h (AO_compare_and_swap_full):
	New function implemented.

2010-05-22  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/Makefile.am (nobase_sysdep_HEADERS):
	Add "gcc/avr32.h".
	* src/atomic_ops/sysdeps/Makefile.in: Regenerate.

2010-05-21  Ivan Maidanski <ivmai@mail.ru> (really Bradley Smith)

	* src/atomic_ops.h: Recognize __avr32__ (include gcc/avr32.h).
	* src/atomic_ops/sysdeps/gcc/avr32.h: New file.

2010-04-29  Ivan Maidanski <ivmai@mail.ru>

	* doc/README_malloc.txt: Fix a typo.
	* doc/README_stack.txt: Ditto.

2010-02-25  Ivan Maidanski <ivmai@mail.ru> (really Bruce Mitchener)

	* .cvsignore: New file.
	* doc/.cvsignore: Ditto.
	* src/.cvsignore: Ditto.
	* src/atomic_ops/.cvsignore: Ditto.
	* src/atomic_ops/sysdeps/.cvsignore: Ditto.
	* tests/.cvsignore: Ditto.

2010-02-19  Ivan Maidanski <ivmai@mail.ru> (mostly really Patrick Marlier)

	* src/atomic_ops/sysdeps/gcc/x86.h (AO_compare_and_swap_full):
	Use __sync_bool_compare_and_swap() if AO_USE_SYNC_CAS_BUILTIN.
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_compare_and_swap_full):
	Ditto.
	* src/atomic_ops.h (AO_USE_SYNC_CAS_BUILTIN): New macro defined
	if GCC v4.2+ or Intel compiler v11.1+ (only for amd64).
	* src/atomic_ops.h: Include GCC-specific sysdeps files for Intel
	compiler in GCC compatible mode (only for x86 and amd64).
